add bulk operations